--- a/index.html
+++ b/index.html
@@ -9,21 +9,34 @@
 </head>
 <body>
     <nav id="side-nav"></nav>
+<div style="display: none;"  id="login-screen">
+    <div id="login-text">
+        Welcome to Goals App!
+One place to manage and achieve all your goals
+    </div>
+    <div id="login-with-google">login with google</div>
+
+</div>
+
     <div style="display: none;" id="make-list-of-goals">
         <div>Start with making a list of your goals</div>
         <input id="goal-input" type="text" placeholder="I want to...">
-        <div class="goal"> I want to make ...</div>
-        <button>Continue</button>
+        <div id="goals-list-holder">
+            <!-- <div class="goal"> I want to make ...</div> -->
+        </div>
+        <button id="set-goal-continue-btn" >Continue</button>
     </div>
     <div style="display: none;" id="prioritize-goals">
         <div class="prioritize-goal-text">Sweet now lets prioritize  your list of goals!</div>
-        <div class="priritize-goal">I want to earn 1000$...</div>
-        <button>Continue</button>
+        <div id="prioriteze-goals-list-holder">
+            <div class="priritize-goal">I want to earn 1000$...</div>
+        </div>
+        <button id="continue-on-prioritise-section-button"  >Continue</button>
         
     </div>
     <div style="display: none;" id="plan-for-top-goal">
         <div>Awesome Now lets work on your top priority goal</div>
-        <div class="goal">i wan to </div>
+        <div id="top-priority-goal" class="goal">i wan to </div>
         <div>Make a list of everything you can do to achieve this goal</div>
         <input placeholder="I can ..." type="text" name="" id="">
         <div class="task">apply for jobs</div>
@@ -40,7 +53,7 @@
         <button>Work on another task</button>
         <button>Done!</button>
     </div>
-    <div id="goal-achieved-question">
+    <div style ="display: none;"  id="goal-achieved-question">
         <div class="goal">I want to make 1000$ a day</div>
         <div>Wow you did all the things on the list to achieve this goal!</div>
         <button>Goal Achieved!</button>
