added local storage

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ One place to manage and achieve all your goals
         </div>
         <button id="convert-into-goal">Convert this task into a goal</button>
         <button>Work on another task</button>
-        <button>Done!</button>
+        <button id= "done-button"  >Done!</button>
     </div>
     <div style ="display: none;"  id="goal-achieved-question">
         <div class="goal">I want to make 1000$ a day</div>
