added manifest and icons and sw.js

--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goals App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <nav id="side-nav"></nav>
-<div style="display: none;"  id="login-screen">
-    <div id="login-text">
-        Welcome to Goals App!
-One place to manage and achieve all your goals
+    
+    <div style="display: none;"  id="login-screen">
+        <div id="login-text">
+            Welcome to Goals App!
+            One place to manage and achieve all your goals
+        </div>
+        <div id="login-with-google">login with google</div>
     </div>
-    <div id="login-with-google">login with google</div>
-
-</div>
 
     <div style="display: none;" id="make-list-of-goals">
         <div>Start with making a list of your goals</div>
