fixed task prioritize error

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!-- july 4 2020 i applied for job -->
         </div>
         <button id="convert-into-goal">Convert this task into a goal</button>
-        <button>Work on another task</button>
+        <button id = 'work-another'>Work on another task</button>
         <button id= "done-button"  >Done!</button>
     </div>
     <div style ="display: none;"  id="goal-achieved-question">
