--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goals App</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="side-nav-style.css">
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icons/apple-icon-180.png">
     <meta name="theme-color" content="#4285f4">
@@ -41,7 +42,15 @@
 
 </head>
 <body>
-    <nav id="side-nav"></nav>
+    <div class="toggle-side-nav-button" onclick="openNav()">-></div>
+    <nav class="sidenav" id="mySidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <!-- <a href="#">About</a> -->
+        <a href="#">My Account</a>
+        <a href="#">Save Data</a>
+        <br><br>
+        <a href="#">Logout</a>
+    </nav>
     
     <div style="display: none;"  id="login-screen">
         <div id="login-text">
