--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <!-- <a href="#">About</a> -->
         <a href="#">My Account</a>
-        <a href="#">Save Data</a>
+        <a href="javascript:void(0)" onclick="saveWork()">Save Data</a>
         <br><br>
         <a href="#">Logout</a>
     </nav>
