--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
     <nav class="sidenav" id="mySidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <!-- <a href="#">About</a> -->
-        <a href="#">My Account</a>
+        <a href="javascript:void(0)" onclick="showSetGoalsScreen()" >My Goals</a>
         <a href="javascript:void(0)" onclick="saveWork()">Save Data</a>
+        <a href="javascript:void(0)" onclick="darkMode(1)">dark mode ON</a>
+        <a href="javascript:void(0)" onclick="darkMode(0)">dark mode OFF</a>
         <br><br>
-        <a href="#">Logout</a>
+        <!-- <a href="#">Logout</a> -->
     </nav>
     
     <div style="display: none;"  id="login-screen">
