archived and syggest

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div style="display: none;" id="make-list-of-goals">
         <div>Start with making a list of your goals</div>
         <input id="goal-input" type="text" placeholder="I want to...">
+        <div id="suggest-holder"></div>
         <div id="goals-list-holder">
             <!-- <div class="goal"> I want to make ...</div> -->
         </div>
