login improvements - userAuth  with google - get display name and email

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div id="login-with-google">Offline login Mode</div>
         OR
         <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div>
     </div>
 
     <div style="display: none;" id="make-list-of-goals">
