--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="apple-touch-startup-image" href="icons/apple-splash-2048-2732.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
 
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script> 
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
@@ -29,6 +30,7 @@
         <a href="javascript:void(0)" onclick="saveWork()">Save Data</a>
         <a href="javascript:void(0)" onclick="darkMode(1)">dark mode ON</a>
         <a href="javascript:void(0)" onclick="darkMode(0)">dark mode OFF</a>
+        <a href="javascript:void(0)" onclick="signOut()">Logout</a>
         <br><br>
         <!-- <a href="#">Logout</a> -->
     </nav>
@@ -91,9 +93,11 @@
         <button>Not Achieved</button>
     </div>
 
+    <script src="functions.js"></script>
+    <script src="definations.js"></script>
 <script src="firebase.js"></script>
-<script src="definations.js"></script>
-<script src="functions.js"></script>
+<script src="data-sync-firebase-and-localStorage.js"></script>
 <script src="index.js"></script>
+
 </body>
 </html>
