--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <nav class="sidenav" id="mySidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <!-- <a href="#">About</a> -->
-        <a href="javascript:void(0)" onclick="showSetGoalsScreen()" >My Goals</a>
-        <a href="javascript:void(0)" onclick="saveWork()">Save Data</a>
-        <a href="javascript:void(0)" onclick="darkMode(1)">dark mode ON</a>
-        <a href="javascript:void(0)" onclick="darkMode(0)">dark mode OFF</a>
-        <a href="javascript:void(0)" onclick="signOut()">Logout</a>
+        <a href="javascript:void(0)" onclick="showSetGoalsScreen();  closeNav() ">My Goals</a>
+        <a href="javascript:void(0)" onclick="saveWork();  closeNav() ">Save Data</a>
+        <a href="javascript:void(0)" onclick="darkMode(1);  closeNav() ">dark mode ON</a>
+        <a href="javascript:void(0)" onclick="darkMode(0);  closeNav() ">dark mode OFF</a>
+        <a href="javascript:void(0)" onclick="signOut();  closeNav() ">Logout</a>
         <br><br>
         <!-- <a href="#">Logout</a> -->
     </nav>
