--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             Welcome to Goals App!
             One place to manage and achieve all your goals
         </div>
-<!--
-        <div id="login-with-google">Offline login Mode</div>
-        OR -->
+
+        <div style="display: none;" id="login-with-google">Offline login Mode</div>
+<!--        OR -->
         <div id="firebaseui-auth-container"></div>
         <div id="loader">Loading...</div>
     </div>
