add show archived goals

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <!-- <a href="#">About</a> -->
         <a href="javascript:void(0)" onclick="showSetGoalsScreen();  closeNav() ">My Goals</a>
+        <a href="javascript:void(0)" onclick="showSetGoalsScreen(1);  closeNav() ">My Archieved Goals</a>
         <a href="javascript:void(0)" onclick="saveWork();  closeNav() ">Save Data</a>
         <a href="javascript:void(0)" onclick="darkMode(1);  closeNav() ">dark mode ON</a>
         <a href="javascript:void(0)" onclick="darkMode(0);  closeNav() ">dark mode OFF</a>
