added go deeper button and functionality

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <!-- july 4 2020 i applied for job -->
         </div>
         <button id="convert-into-goal">Convert this task into a goal</button>
+        <button id="go_deeper_btn">Go Deeper</button>
         <button id = 'work-another'>Work on another task</button>
         <button id= "done-button"  >Done!</button>
     </div>
