--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <nav class="sidenav" id="mySidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <!-- <a href="#">About</a> -->
-        <a href="javascript:void(0)" onclick="showSetGoalsScreen();  closeNav() ">My Goals</a>
+        <a id='my-goals-nav-link' href="javascript:void(0)" onclick="showSetGoalsScreen();  closeNav() ">My Goals</a>
         <a href="javascript:void(0)" onclick="showSetGoalsScreen(1);  closeNav() ">My Archieved Goals</a>
         <a href="javascript:void(0)" onclick="saveWork();  closeNav() ">Save Data</a>
         <a href="javascript:void(0)" onclick="darkMode(1);  closeNav() ">dark mode ON</a>
