fix bug with task switching, add keyboard shortcut n

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <a href="javascript:void(0)" onclick="darkMode(0);  closeNav() ">dark mode OFF</a>
         <a href="javascript:void(0)" onclick="signOut();  closeNav() ">Logout</a>
         <br><br>
+        <p>Version 3.7.1</p>
         <!-- <a href="#">Logout</a> -->
     </nav>
     
