--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
         <a href="javascript:void(0)" onclick="darkMode(0);  closeNav() ">dark mode OFF</a>
         <a href="javascript:void(0)" onclick="signOut();  closeNav() ">Logout</a>
         <br><br>
-        <p>Version 3.7.1</p>
+        <a href="javascript:void(0)" >Version 3.7.2</a>
+        <!-- <p style ='color: white;' ></p> -->
         <!-- <a href="#">Logout</a> -->
     </nav>
     
