--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
         <a href="javascript:void(0)" onclick="darkMode(0);  closeNav() ">dark mode OFF</a>
         <a href="javascript:void(0)" onclick="signOut();  closeNav() ">Logout</a>
         <br><br>
-        <a href="javascript:void(0)" >Version 3.7.4</a>
+        <a href="javascript:void(0)" >Version 3.7.5</a>
+        <small>'improved search;typo;changed cache policy;css; fix bug with task switching, add keyboard shortcut n ;fix bug save work;implemented search!  added nav item - show prioritize goals section; checkbox move item nav css and move down fix 2 fix css goal checkbox moved continue button up added keyboardshorts for navigation  added go deeper button and functionality'        </small>
         <!-- <p style ='color: white;' ></p> -->
         <!-- <a href="#">Logout</a> -->
     </nav>
