--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
         <a href="javascript:void(0)" onclick="darkMode(0);  closeNav() ">dark mode OFF</a>
         <a href="javascript:void(0)" onclick="signOut();  closeNav() ">Logout</a>
         <br><br>
-        <a href="javascript:void(0)" >Version 3.8.0</a>
-        <small>'really improved search;improved search;typo;changed cache policy;css; fix bug with task switching, add keyboard shortcut n ;fix bug save work;implemented search!  added nav item - show prioritize goals section; checkbox move item nav css and move down fix 2 fix css goal checkbox moved continue button up added keyboardshorts for navigation  added go deeper button and functionality'        </small>
+        <a href="javascript:void(0)" >Version 3.8.1</a>
+        <small>notes fix </small>
         <!-- <p style ='color: white;' ></p> -->
         <!-- <a href="#">Logout</a> -->
     </nav>
@@ -105,6 +105,7 @@
 <script src="firebase.js"></script>
 <script src="data-sync-firebase-and-localStorage.js"></script>
 <script src="index.js"></script>
+<script src="tests.js"></script>
 
 </body>
 </html>
