--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,8 @@
             <!-- july 4 2020 i applied for job -->
         </div>
         <button id="convert-into-goal">Convert this task into a goal</button>
+        <button id="make-child-btn">make this a task of another goal</button>
+        <button id="make-parent-btn">make this a parent of another goal</button>
         <button id="go_deeper_btn">Go Deeper</button>
         <button id = 'work-another'>Work on another task</button>
         <button id= "done-button"  >Done!</button>
