added make child ot parent sectiopn in index html

--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,15 @@
         <button id = 'work-another'>Work on another task</button>
         <button id= "done-button"  >Done!</button>
     </div>
+
+    <div style="display:none" id = "makeChildOrParentSection">
+        <div id="make_current_taks">current task name</div>
+        <div id="CorP">child or parent of relationship </div>
+        <div id="of-this-goal-or-task">Name of goal or task on right of relationship</div>
+    </div>
+
+
+
     <div style ="display: none;"  id="goal-achieved-question">
         <div class="goal">I want to make 1000$ a day</div>
         <div>Wow you did all the things on the list to achieve this goal!</div>
