--- a/public/index.html
+++ b/public/index.html
@@ -97,9 +97,11 @@
     </div>
 
     <div style="display:none" id = "makeChildOrParentSection">
+        <div> make </div>
         <div id="make_current_taks">current task name</div>
         <div id="CorP">child or parent of relationship </div>
-        <div id="of-this-goal-or-task">Name of goal or task on right of relationship</div>
+        <div id="of_this_goal_or_task">none selected, please search and select Name of goal or task on right of relationship</div>
+        <input id='search_to_make_parent' placeholder="none selected, please search and select Name of goal or task on right of relationship"  type="text">
     </div>
 
 
