--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
 <script src="firebase.js"></script>
 <script src="data-sync-firebase-and-localStorage.js"></script>
 <script src="index.js"></script>
-<script src="tests.js"></script>
+<!-- <script src="tests.js"></script> -->
 
 </body>
 </html>
