--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
         <a href="javascript:void(0)" onclick="darkMode(1);  closeNav() ">dark mode ON</a>
         <a href="javascript:void(0)" onclick="darkMode(0);  closeNav() ">dark mode OFF</a>
         <a href="javascript:void(0)" onclick="signOut();  closeNav() ">Logout</a>
+        <a href="javascript:void(0)" onclick="archieve_or_un_all(false);  closeNav() ">unarchieve all goals </a>
+        <a href="javascript:void(0)" onclick="archieve_or_un_all(true)();  closeNav() ">archieve all goals</a>
         <br><br>
         <a href="javascript:void(0)" >Version 3.8.1</a>
         <small>notes fix </small>
