--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     </div>
 
     <div style="display: none;" id="make-list-of-goals">
-        <div>Start with making a list of your goals</div>
+        <div>Start with making a list of your goals / what do you want to do? / what do you want to invest your time in? </div>
         <input id="goal-input" type="text" placeholder="I want to...">
         <div id="suggest-holder"></div>
         <button id="set-goal-continue-btn" >Continue</button>
