added full screener

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
         <a href="javascript:void(0)" onclick="signOut();  closeNav() ">Logout</a>
         <a href="javascript:void(0)" onclick="archieve_or_un_all(false);  closeNav() ">unarchieve all goals </a>
         <a href="javascript:void(0)" onclick="archieve_or_un_all(true)();  closeNav() ">archieve all goals</a>
+        <a href="javascript:void(0)" onclick="makefullscreen();  closeNav() ">fullscreen</a>
         <br><br>
         <a href="javascript:void(0)" >Version 3.8.1</a>
         <small>notes fix </small>
