changed to offline only

--- a/public/index.html
+++ b/public/index.html
@@ -45,19 +45,19 @@
     
     <div style="display: none;"  id="login-screen">
         <div id="login-text">
-            Welcome to Goals App!
-            One place to manage and achieve all your goals
+            Welcome to What Should I do now App!
+            
         </div>
 
-        <div style="display: none;" id="login-with-google">Offline login Mode</div>
+        <div id="login-with-google">Offline login Mode</div>
 <!--        OR -->
-        <div id="firebaseui-auth-container"></div>
-        <div id="loader">Loading...</div>
+        <!-- <div id="firebaseui-auth-container"></div>
+        <div id="loader">Loading...</div> -->
     </div>
 
     <div style="display: none;" id="make-list-of-goals">
-        <div>Start with making a list of your goals / what do you want to do? / what do you want to invest your time in? </div>
-        <input id="goal-input" type="text" placeholder="I want to...">
+        <div>Start with making a list of your todos / what all can you do now what are your options? </div>
+        <input id="goal-input" type="text" placeholder="Now I can do...">
         <div id="suggest-holder"></div>
         <button id="set-goal-continue-btn" >Continue</button>
         <div id="goals-list-holder">
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div style="display: none;" id="prioritize-goals">
-        <div class="prioritize-goal-text">Sweet now lets prioritize  your list of goals!</div>
+        <div class="prioritize-goal-text">Sweet now lets prioritize  your list of can-dos!</div>
         <button id="continue-on-prioritise-section-button"  >Continue</button>
         <div id="prioriteze-goals-list-holder">
             <div class="priritize-goal">I want to earn 1000$...</div>
