--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,6 @@
 
     <link rel="apple-touch-startup-image" href="icons/apple-splash-2048-2732.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
 
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script> 
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-
 </head>
 <body>
     <div class="toggle-side-nav-button" onclick="openNav()">-></div>
@@ -37,8 +31,8 @@
         <a href="javascript:void(0)" onclick="archieve_or_un_all(true)();  closeNav() ">archieve all goals</a>
         <a href="javascript:void(0)" onclick="makefullscreen();  closeNav() ">fullscreen</a>
         <br><br>
-        <a href="javascript:void(0)" >Version 3.8.1</a>
-        <small>notes fix </small>
+        <a href="javascript:void(0)" >Version 3.8.2</a>
+        <small>main - notes fix </small>
         <!-- <p style ='color: white;' ></p> -->
         <!-- <a href="#">Logout</a> -->
     </nav>
