--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,15 +13,18 @@
     <meta name="theme-color" content="#4285f4">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2048-2732.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+    <link rel="apple-touch-startup-image" href="icons/apple-splash-2048-2732.jpg"
+        media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
 
 </head>
+
 <body>
     <div class="toggle-side-nav-button" onclick="openNav()">-></div>
     <nav class="sidenav" id="mySidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a id='my-goals-nav-link' href="javascript:void(0)" onclick="showSetGoalsScreen();  closeNav() ">My Goals</a>
-        <a id='my-goals-nav-link' href="javascript:void(0)" onclick="showPrioritizeSection();  closeNav() ">prioritize my goals</a>
+        <a id='my-goals-nav-link' href="javascript:void(0)" onclick="showPrioritizeSection();  closeNav() ">prioritize
+            my goals</a>
         <a href="javascript:void(0)" onclick="showSetGoalsScreen(1);  closeNav() ">My Archieved Goals</a>
         <a href="javascript:void(0)" onclick="saveWork();  closeNav() ">Save Data</a>
         <a href="javascript:void(0)" onclick="darkMode(1);  closeNav() ">dark mode ON</a>
@@ -30,69 +34,73 @@
         <a href="javascript:void(0)" onclick="archieve_or_un_all(true)();  closeNav() ">archieve all goals</a>
         <a href="javascript:void(0)" onclick="makefullscreen();  closeNav() ">fullscreen</a>
         <br><br>
-        <a href="javascript:void(0)" >Version 3.8.2</a>
+        <a href="javascript:void(0)">Version 3.8.2</a>
         <small>main - notes fix </small>
     </nav>
     <!-- maintainence note -->
     <div id="maintainence-note">
         <div>Sorry for the inconvenience, we are currently working on the app, it will be back soon!</div>
         <div>Thank you for your patience</div>
-        <div>Please contact lakshay if you have any questions <a href="https://t.me/lakshaynz">https://t.me/lakshaynz</a></div>
+        <div>Please contact lakshay if you have any questions <a
+                href="https://t.me/lakshaynz">https://t.me/lakshaynz</a></div>
     </div>
-    <div style="display: none;"  id="login-screen">
+    <div style="display: none;" id="login-screen">
         <div id="login-text">
             Welcome to Goals App!
             One place to manage and achieve all your goals
         </div>
 
         <div style="display: block;" id="login-with-google">Offline login Mode</div>
-       OR
-        <div id="firebaseui-auth-container"></div>
-        <div id="loader">Loading...</div>
+        OR
+        <div id="g_id_onload" data-client_id="YOUR_GOOGLE_CLIENT_ID"
+            data-login_uri="https://your.domain/your_login_endpoint" data-your_own_param_1_to_login="any_value"
+            data-your_own_param_2_to_login="any_value">
+        </div>
     </div>
 
     <div style="display: none;" id="make-list-of-goals">
-        <div>Start with making a list of your goals / what do you want to do? / what do you want to invest your time in? </div>
+        <div>Start with making a list of your goals / what do you want to do? / what do you want to invest your time in?
+        </div>
         <input id="goal-input" type="text" placeholder="I want to...">
         <div id="suggest-holder"></div>
-        <button id="set-goal-continue-btn" >Continue</button>
+        <button id="set-goal-continue-btn">Continue</button>
         <div id="goals-list-holder">
             <!-- <div class="goal"> I want to make ...</div> -->
         </div>
     </div>
     <div style="display: none;" id="prioritize-goals">
-        <div class="prioritize-goal-text">Sweet now lets prioritize  your list of goals!</div>
-        <button id="continue-on-prioritise-section-button"  >Continue</button>
+        <div class="prioritize-goal-text">Sweet now lets prioritize your list of goals!</div>
+        <button id="continue-on-prioritise-section-button">Continue</button>
         <div id="prioriteze-goals-list-holder">
             <div class="priritize-goal">I want to earn 1000$...</div>
         </div>
-        
+
     </div>
     <div style="display: none;" id="plan-for-top-goal">
         <div>Awesome Now lets work on your top priority goal</div>
         <div class="top-priority-goal goal">i wan to </div>
         <div>Make a list of everything you can do to achieve this goal</div>
         <input id="task-input" placeholder="I can ..." type="text" name="" id="">
-        <button id= 'continue-btn-on-plan-section'>Continue</button>
-        <div id ="task-list-holder">
+        <button id='continue-btn-on-plan-section'>Continue</button>
+        <div id="task-list-holder">
             <!-- <div class="task">apply for jobs</div> -->
         </div>
     </div>
     <div style="display: none;" id="work-on-task">
         <div class="top-priority-goal goal">make 1000$ a day</div>
         <div>Great! lets now work on the goal! </div>
-        <div id ="current-task" class="task">apply for jobs</div>
+        <div id="current-task" class="task">apply for jobs</div>
         <div>Notes</div>
-        <input id="notes-input" placeholder="I did ... I have a problem..."  type="text">
+        <input id="notes-input" placeholder="I did ... I have a problem..." type="text">
         <div id="notes">
             <!-- july 4 2020 i applied for job -->
         </div>
         <button id="convert-into-goal">Convert this task into a goal</button>
         <button id="go_deeper_btn">Go Deeper</button>
-        <button id = 'work-another'>Work on another task</button>
-        <button id= "done-button"  >Done!</button>
+        <button id='work-another'>Work on another task</button>
+        <button id="done-button">Done!</button>
     </div>
-    <div style ="display: none;"  id="goal-achieved-question">
+    <div style="display: none;" id="goal-achieved-question">
         <div class="goal">I want to make 1000$ a day</div>
         <div>Wow you did all the things on the list to achieve this goal!</div>
         <button>Goal Achieved!</button>
@@ -101,10 +109,11 @@
 
     <script src="functions.js"></script>
     <script src="definations.js"></script>
-<script src="firebase.js"></script>
-<script src="data-sync-firebase-and-localStorage.js"></script>
-<script src="index.js"></script>
-<!-- <script src="tests.js"></script> -->
+    <script src="firebase.js"></script>
+    <script src="data-sync-firebase-and-localStorage.js"></script>
+    <script src="index.js"></script>
+    <!-- <script src="tests.js"></script> -->
 
 </body>
+
 </html>
