default dark mode and login

--- a/public/index.html
+++ b/public/index.html
@@ -48,13 +48,16 @@
 
         <div style="display: block;" id="login-with-google">Offline login Mode</div>
         OR
-        <div id="g_id_onload" data-client_id="667648358864-mddbhmv1u7mtqa4j44rk6berdli3rohf.apps.googleusercontent.com"
-            data-context="use" data-ux_mode="popup" data-callback="onSignIn" data-itp_support="true">
-        </div>
+        <div style="display: block;" id="login-with-google-real">
+            <div id="g_id_onload" data-client_id="667648358864-mddbhmv1u7mtqa4j44rk6berdli3rohf.apps.googleusercontent.com"
+                data-context="use" data-ux_mode="popup" data-callback="onSignIn" data-itp_support="true">
+            </div>
 
-        <div class="g_id_signin" data-type="standard" data-shape="rectangular" data-theme="outline"
-            data-text="signin_with" data-size="large" data-logo_alignment="left">
+            <div class="g_id_signin" data-type="standard" data-shape="rectangular" data-theme="outline"
+                data-text="signin_with" data-size="large" data-logo_alignment="center">
+            </div>
         </div>
+        <div>google login is not functional atm, I'm working on it, pls use offline mode until then</div>
     </div>
 
     <div style="display: none;" id="make-list-of-goals">
