--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
     <script src="index.js"></script>
     <script>
         function onSignIn(googleUser) {
-            console.log(googleUser)
+            login_user(googleUser)
         }
     </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
