--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goals App</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="side-nav-style.css">
+    <link rel="stylesheet" href="style.css?v=1.0">
+    <link rel="stylesheet" href="side-nav-style.css?v=1.0">
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icons/apple-icon-180.png">
     <meta name="theme-color" content="#4285f4">
@@ -109,9 +109,9 @@
         <button>Not Achieved</button>
     </div>
 
-    <script src="functions.js"></script>
-    <script src="definations.js"></script>
-    <script src="index.js"></script>
+    <script src="functions.js?v=1.0"></script>
+    <script src="definations.js?v=1.0"></script>
+    <script src="index.js?v=1.0"></script>
     <script>
         function onSignIn(googleUser) {
             login_user(googleUser)
