--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                 data-text="signin_with" data-size="large" data-logo_alignment="center">
             </div>
         </div>
-        <div>google login is not functional atm, I'm working on it, pls use offline mode until then</div>
+        <!-- <div>google login is not functional atm, I'm working on it, pls use offline mode until then</div> -->
     </div>
 
     <div style="display: none;" id="make-list-of-goals">
