--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             One place to manage and achieve all your goals
         </div>
 
-        <div style="display: block;" id="login-with-google">Offline login Mode</div>
+        <div style="display: block;" id="offline-login">Offline login Mode</div>
         OR
         <div style="display: block;" id="login-with-google-real">
             <div id="g_id_onload" data-client_id="667648358864-mddbhmv1u7mtqa4j44rk6berdli3rohf.apps.googleusercontent.com"
@@ -115,6 +115,7 @@
     <script>
         function onSignIn(googleUser) {
             console.log(googleUser)
+
         }
     </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
